# gramslator

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  espflash.toml  flash.sh  partitions.csv  rust-toolchain.toml
.cargo/: config.toml
docs/: design_doc.md  hackathon_questions.md
scripts/: .gitignore  websocket_audio_server.py
src/: app_state.rs  flash_data.rs  lib.rs  net.rs  translate.rs
src/elecrow_board/: display.rs  mic.rs  mic_wireless_module_switch.rs  mod.rs  network.rs  touch.rs
src/elecrow_board/display/: async_display.rs  hardware.rs  mod.rs
src/elecrow_board/mic/: dma_blocking_read_task.rs  mod.rs
src/elecrow_board/wifi/: mod.rs  wifi_connect_task.rs  wifi_status_task.rs
src/networking/: connection.rs  deepgram.rs  mod.rs  tls.rs  websocket.rs
src/rendering/: bitmap.rs  display_task.rs  font.rs  framebuffer.rs  layout.rs  mod.rs  status.rs
src/translation/: client.rs  helpers.rs  mod.rs  task.rs  translation_task.rs
stl/: Gramslator - Back.stl  Gramslator - Front.stl
web/: index.html
