[package]
edition = "2024"
name = "gramslator"
rust-version = "1.88"
version = "0.1.0"
autobins = false

[[bin]]
name = "test-project"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["defmt", "esp32s3", "unstable", "psram"] }
esp32s3 = "0.34.0"
libm = "0.2"

esp-rtos = { version = "0.2.0", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32s3",
  "defmt",
] }

defmt = "1.0.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32s3"] }

embassy-net = { version = "0.8", features = [
  "dhcpv4",
  "dns",
  "defmt",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = "0.7"
embedded-io-async = "0.7"
esp-alloc = { version = "0.9.0", features = ["nightly"] }
esp-backtrace = { version = "0.18.1", features = [
  "esp32s3",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.16.1", features = ["esp32s3", "defmt-espflash"] }
# for more networking protocol support see https://crates.io/crates/edge-net
embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-sync = { version = "0.7", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
esp-radio = { version = "0.17.0", features = [
  "esp-alloc",
  "esp32s3",
  "defmt",
  "smoltcp",
  "unstable",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }

critical-section = "1.2.0"
static_cell = "2.1.1"
mipidsi = "0.10.0"
embedded-graphics = "0.8.2"
embedded-hal-bus = "0.1"
embedded-hal = "1.0"

edge-ws = { version = "0.7", default-features = false, features = [
  "io",
  "defmt",
] }
mbedtls-rs = { git = "https://github.com/esp-rs/mbedtls-rs", features = [
  "defmt",
] }
tinyrlibc = { version = "0.5", default-features = false, features = ["memchr"] }
ttf-parser = { version = "0.21", default-features = false }
ab_glyph_rasterizer = { version = "0.1", default-features = false, features = ["libm"] }
konst = "0.3.16"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
